maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: Int does not take parameters
	var nb:Int=random3() {
                             ^