maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
while(!estSurBiscuit) {
	var nb:Int=random3() {
	     case 0 => if (!estFaceMur) { avance }
	     case 1 => droite
	     case 2 => gauche
	}
}
    // Your code here 
}
